--- a/luna/pds/docker-compose.yaml
+++ b/luna/pds/docker-compose.yaml
@@ -1,6 +1,10 @@
 services:
   pds:
-    image: ghcr.io/bluesky-social/pds:0.4.67
+    # image: luna-bsky-pds:0.4.67
+    build:
+      context: ..
+      dockerfile: ./pds/Dockerfile
+    # ghcr.io/bluesky-social/pds:0.4.67
     ports:
       - 2583:2583
     volumes:
@@ -9,15 +13,15 @@ services:
     environment:
       PDS_DATA_DIRECTORY: /luna/data
       PDS_BLOBSTORE_DISK_LOCATION: /luna/blob_data
-      PDS_HOSTNAME: "pds.coolsky.ln4.net"
+      PDS_HOSTNAME: "pds.gsky.ln4.net"
       PDS_PORT: "2583"
       PDS_BLOB_UPLOAD_LIMIT: "100000000000"
-      PDS_DID_PLC_URL: "http://host.docker.internal:2582"
-      PDS_BSKY_APP_VIEW_URL: "http://host.docker.internal:2584"
+      PDS_DID_PLC_URL: "https://plc.gsky.ln4.net"
+      PDS_BSKY_APP_VIEW_URL: "https://appview.gsky.ln4.net"
       PDS_BSKY_APP_VIEW_DID: "did:plc:AAAAAAAAAAAAAAAAAA"
-      PDS_REPORT_SERVICE_URL: "http:/host.docker.internal:2587" # ozone?
+      PDS_REPORT_SERVICE_URL: "https://ozone.gsky.ln4.net" # ozone?
       PDS_REPORT_SERVICE_DID: "did:plc:BBBBBBBBBBBBBBBBBb"
-      PDS_CRAWLERS: "https://host.docker.internal:8813" # relay?
+      PDS_CRAWLERS: "https://relay.gsky.ln4.net" # relay?
       LOG_ENABLED: "true"
       PDS_JWT_SECRET: "4abb6f48bbd656205134f0b78eab35aa"
       PDS_ADMIN_PASSWORD: "2f28e4183b8ab1b5a684df9078483d74"
