fix pds tls setup

--- a/luna/pds/Dockerfile
+++ b/luna/pds/Dockerfile
@@ -1,4 +1,6 @@
 FROM ghcr.io/bluesky-social/pds:0.4.67
+RUN echo 1
 RUN apk --no-cache add ca-certificates
 COPY ../rootCA.pem /usr/local/share/ca-certificates
-RUN update-ca-certificates
+COPY ../rootCA.pem /etc/ssl/certs
+RUN update-ca-certificates -f
