--- a/luna/pds/docker-compose.yaml
+++ b/luna/pds/docker-compose.yaml
@@ -4,12 +4,14 @@ services:
     build:
       context: ..
       dockerfile: ./pds/Dockerfile
+    # command: sleep 1000
     # ghcr.io/bluesky-social/pds:0.4.67
     extra_hosts:
       - relay.gsky.ln4.net:172.17.0.1
       - ozone.gsky.ln4.net:172.17.0.1
       - pds.gsky.ln4.net:172.17.0.1
       - plc.gsky.ln4.net:172.17.0.1
+      - appview.gsky.ln4.net:172.17.0.1
     ports:
       - 2583:2583
     volumes:
