--- a/luna/pds/Dockerfile
+++ b/luna/pds/Dockerfile
@@ -3,6 +3,7 @@ RUN echo 1
 RUN apk --no-cache add ca-certificates
 COPY ../rootCA.pem /usr/local/share/ca-certificates
 COPY ../rootCA.pem /etc/ssl/certs
+# required as for my setup the appview is running via the docker host ip, which isn't unicast. patch all the checks for now
 RUN sed -i "s/ip.range() === 'unicast'/true/" /app/node_modules/.pnpm/@atproto-labs+fetch-node@0.1.3/node_modules/@atproto-labs/fetch-node/src/util.ts
 RUN sed -i "s/ip.range() !== 'unicast'/false/" /app/node_modules/.pnpm/@atproto-labs+fetch-node@0.1.3/node_modules/@atproto-labs/fetch-node/src/unicast.ts
 RUN sed -i "s/ip.range() === 'unicast'/true/" /app/node_modules/.pnpm/@atproto-labs+fetch-node@0.1.3/node_modules/@atproto-labs/fetch-node/dist/util.js
