--- a/luna/nginx/nginx.conf
+++ b/luna/nginx/nginx.conf
@@ -8,7 +8,7 @@ events {
 http {
     default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    log_format  main  '$remote_addr - $remote_user [$time_local] $http_host "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
@@ -30,6 +30,9 @@ http {
     }
     upstream appview {
         server 172.17.0.1:2584;
+    }
+    upstream dataplane {
+        server 172.17.0.1:2671;
     }
 
     server {
@@ -136,5 +139,19 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
         ssl_prefer_server_ciphers off;
+    }
+    server {
+        listen 0.0.0.0:20031;
+        http2 on;
+        server_name dataplane.gsky.ln4.net;
+        chunked_transfer_encoding on;
+
+        location / {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $http_host;
+            proxy_pass http://dataplane;
+        }
     }
 }
