--- a/luna/nginx/nginx.conf
+++ b/luna/nginx/nginx.conf
@@ -140,6 +140,7 @@ http {
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
         ssl_prefer_server_ciphers off;
     }
+    # why does the dataplane require http2 oh my goddddddd ;_;
     server {
         listen 0.0.0.0:20031;
         http2 on;
