--- a/luna/feedgen/package.json
+++ b/luna/feedgen/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "scripts": {
     "publishFeed": "ts-node scripts/publishFeedGen.ts",
+    "publishFeedEnv": "ts-node scripts/publishFeedGenEnv.ts",
     "unpublishFeed": "ts-node scripts/unpublishFeedGen.ts",
     "start": "ts-node src/index.ts",
     "build": "tsc"
