add ozone to nginx

--- a/luna/nginx/nginx.conf
+++ b/luna/nginx/nginx.conf
@@ -40,6 +40,9 @@ http {
     upstream cdn {
         server 172.17.0.1:9036;
     }
+    upstream ozone {
+        server 172.17.0.1:9037;
+    }
 
     server {
         listen 0.0.0.0:20030 ssl;
@@ -184,6 +187,32 @@ http {
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $http_host;
             proxy_pass http://cdn;
+        }
+
+        ssl_certificate /tls/gsky.ln4.net/cert.pem;
+        ssl_certificate_key /tls/gsky.ln4.net/key.pem;
+
+        # Mozilla Intermediate
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
+        ssl_session_tickets off;
+        ssl_dhparam /etc/nginx/ssl-dhparams.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+    }
+    server {
+        listen 0.0.0.0:20030 ssl;
+        server_name ozone.gsky.ln4.net;
+        chunked_transfer_encoding on;
+
+        location / {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $http_host;
+            proxy_pass http://ozone;
         }
 
         ssl_certificate /tls/gsky.ln4.net/cert.pem;
